# KerjaCerdas

./: .env.example  .gitignore  Dockerfile  README.md  dev.ps1  docker-compose.yml  kerjacerdas.db  pyproject.toml
.design-cache/: auth.jsx  components.jsx  employer.jsx  landing.jsx  seeker.jsx
backend/app/: __main__.py
backend/app/agents/graph/: builder.py  nodes.py  state.py
backend/app/api/: dependencies.py  main.py  models.py
backend/app/api/routers/: admin.py  agent.py  auth.py  employer.py  jobs.py  seeker.py  (+2 more)
backend/app/config/: settings.py
backend/app/db/: json_store.py  schemas.py  supabase_store.py
backend/app/ml/: matcher.py
backend/app/prompts/: SUPERPOWER.md
backend/app/services/: pdf_parser.py  prompt_loader.py
backend/tests/unit/: test_api.py  test_ml.py
data/: kerjacerdas.db
docs/: BUSINESS_MODEL.md  DEMO_SCRIPT.md  FEASIBILITY_REPORT.md  FEATURE_PLAN.md  ML_PIPELINE.md  PRD.md  PROPOSAL_2ND.md  RUN_LOCAL.md
frontend/: README.md  index.html  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AboutPage.jsx  AdminDashboard.jsx  AuthModal.jsx  CVUploader.jsx  EmployerCandidates.jsx  EmployerDashboardV2.jsx  EmployerPostJob.jsx  EmployerVerification.jsx  FloatingAdvisor.jsx  Footer.jsx  JobCard.jsx  JobPackUploader.jsx  LandingHero.jsx  PricingPage.jsx  PrivacyPolicyPage.jsx  PublicHeader.jsx  SavedJobsPage.jsx  SearchForm.jsx  SeekerDashboard.jsx  SeekerMatchResults.jsx  Sidebar.jsx  SkillGapPanel.jsx  VerificationDashboard.jsx  _design.jsx
frontend/src/services/: api.js
frontend/src/store/: useStore.js
scripts/: seed_demo.py  seed_json.py  sync_sqlite.py
(+11 files in other folders)
