[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[project]
name = "kerjacerdas"
version = "0.2.0"
description = "AI-Powered Job Matching Platform for Indonesia"
requires-python = ">=3.11"

dependencies = [
    # Web
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "email-validator>=2.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    # Auth
    "bcrypt>=4.1.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.20",
    # PDF text extraction (offline fallback when no Gemini/Vertex key)
    "pypdf>=5.0.0",
    # AI / agents
    "google-genai>=1.0.0",
    "langgraph>=0.2.50",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    # Data / storage
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "supabase>=2.5.0",
    "pgvector>=0.3.0",
    # ML
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]
ml-heavy = [
    "torch>=2.2.0",
    "transformers>=4.38.0",
    "sentence-transformers>=2.6.0",
    "mlflow>=2.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
